// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transcript screen > renders the final answer at 100 columns 1`] = `
"TRANSCRIPT 4kRr1sFNYuCSMX1JipL40
  system      │── ASSISTANT · round 10 ──                                  22.0s · 20k ctx · $0.0034
  user        │response
  round 1     │  code
    agencyGui…│def archiveNotes(count: number): Result<string> {
  round 2     │  // Raise an interrupt with effect \`notes::archive\` and payload containing the coun…
    agencyGui…│  raise notes::archive("Archive \${count} notes?", { count: count })
  round 3     │  return success("archived \${count}")
    agencyGui…│}
  round 4     │
    grep      │/**
  tool        │For count == 11:
  round 5     │- Both handlers run. The inner handler (closest to the call) executes and approves t…
    grep      │- Because any handler rejecting causes the interrupt to be rejected even if an inner…
  tool        │*/
  round 6     │def runArchive(count: number): string {
    grep      │  handle {
  tool        │    // Inner handler: approves notes::archive interrupts.
  round 7     │    handle {
    grep      │      const res: Result<string> = archiveNotes(count)
  tool        │      if (isSuccess(res)) {
  round 8     │        return "archived"
    agencyGui…│      }
  round 9     │      return "rejected"
    typecheck │    } with (intr) {
▶ round 10    │      if (intr.effect == "notes::archive") {
              │        return approve()
              │      }
              │      return pass()
              │    }
              │  } with (intr) {
              │    // Outer handler: rejects notes::archive when count > 10, otherwise passes.
              │    if (intr.effect == "notes::archive") {
              │      if (intr.data.count > 10) {
              │        return reject()
              │      }
              │    }
              │    return pass()
              │  }
j k move   ⏎ expand   s system   / find   d detail   y copy"
`;

exports[`transcript screen > renders the final answer at 130 columns 1`] = `
"TRANSCRIPT 4kRr1sFNYuCSMX1JipL40
  system      │── ASSISTANT · round 10 ──                                                                22.0s · 20k ctx · $0.0034
  user        │response
  round 1     │  code
    agencyGui…│def archiveNotes(count: number): Result<string> {
  round 2     │  // Raise an interrupt with effect \`notes::archive\` and payload containing the count.
    agencyGui…│  raise notes::archive("Archive \${count} notes?", { count: count })
  round 3     │  return success("archived \${count}")
    agencyGui…│}
  round 4     │
    grep      │/**
  tool        │For count == 11:
  round 5     │- Both handlers run. The inner handler (closest to the call) executes and approves the notes::archive interrupt. T…
    grep      │- Because any handler rejecting causes the interrupt to be rejected even if an inner handler approved it, archiveN…
  tool        │*/
  round 6     │def runArchive(count: number): string {
    grep      │  handle {
  tool        │    // Inner handler: approves notes::archive interrupts.
  round 7     │    handle {
    grep      │      const res: Result<string> = archiveNotes(count)
  tool        │      if (isSuccess(res)) {
  round 8     │        return "archived"
    agencyGui…│      }
  round 9     │      return "rejected"
    typecheck │    } with (intr) {
▶ round 10    │      if (intr.effect == "notes::archive") {
              │        return approve()
              │      }
              │      return pass()
              │    }
              │  } with (intr) {
              │    // Outer handler: rejects notes::archive when count > 10, otherwise passes.
              │    if (intr.effect == "notes::archive") {
              │      if (intr.data.count > 10) {
              │        return reject()
              │      }
              │    }
              │    return pass()
              │  }
j k move   ⏎ expand   s system   / find   d detail   y copy"
`;

exports[`transcript screen > renders the final answer at 200 columns 1`] = `
"TRANSCRIPT 4kRr1sFNYuCSMX1JipL40
  system      │── ASSISTANT · round 10 ──                                                                                                                                      22.0s · 20k ctx · $0.0034
  user        │response
  round 1     │  code
    agencyGui…│def archiveNotes(count: number): Result<string> {
  round 2     │  // Raise an interrupt with effect \`notes::archive\` and payload containing the count.
    agencyGui…│  raise notes::archive("Archive \${count} notes?", { count: count })
  round 3     │  return success("archived \${count}")
    agencyGui…│}
  round 4     │
    grep      │/**
  tool        │For count == 11:
  round 5     │- Both handlers run. The inner handler (closest to the call) executes and approves the notes::archive interrupt. The outer handler then executes and, because count > 10, rejects the no…
    grep      │- Because any handler rejecting causes the interrupt to be rejected even if an inner handler approved it, archiveNotes ends up failing, so runArchive returns "rejected".
  tool        │*/
  round 6     │def runArchive(count: number): string {
    grep      │  handle {
  tool        │    // Inner handler: approves notes::archive interrupts.
  round 7     │    handle {
    grep      │      const res: Result<string> = archiveNotes(count)
  tool        │      if (isSuccess(res)) {
  round 8     │        return "archived"
    agencyGui…│      }
  round 9     │      return "rejected"
    typecheck │    } with (intr) {
▶ round 10    │      if (intr.effect == "notes::archive") {
              │        return approve()
              │      }
              │      return pass()
              │    }
              │  } with (intr) {
              │    // Outer handler: rejects notes::archive when count > 10, otherwise passes.
              │    if (intr.effect == "notes::archive") {
              │      if (intr.data.count > 10) {
              │        return reject()
              │      }
              │    }
              │    return pass()
              │  }
j k move   ⏎ expand   s system   / find   d detail   y copy"
`;
